Add: new project

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,45 +1,4 @@
-﻿/*
-Template Name: Istanbul - Personal Portfolio
-Author: Celtano
-Author URI: http://themeforest.net/user/celtano
-Description: Istanbul - Personal Portfolio
-Version: 1.0
-*/
-
-
-/*------------------------------------------------------------------
-[Table of contents]
-	+ General
-		- Dark Body
-		- Preloader
-	+ Header
-		- Navigation
-	+ Main Section
-		+ miscellaneous
-			- Text Rotator
-		+ About
-			- Personal Informations
-			- Resume Panels
-			- Skills
-		- Portfolio
-		+ Blog
-			- Latest Posts
-			+ Blog Page 
-				- Posts
-				- Comments
-				- Comments Form
-		+ Contact
-			- Left Side
-			- Social Media Icons
-			- Right Side
-	- Responsive Design Styles
--------------------------------------------------------------------*/
-
-/* [ GENERAL ] */
-/*================================================== */
-
-
-body,
+﻿body,
 html {
   font-size: 100%;
   padding: 0;
@@ -372,56 +331,6 @@ body.dark .profile-picture img {
   border: 3px solid #353535;
 }
 
-body.blog.dark .comments-list .comment:not(.last) {
-  border-bottom: 1px solid #555;
-}
-
-body.dark .contact-container  .contact .leftside span i {
-  color: rgba(255, 255, 255, .3);
-}
-
-body.blog.dark p,
-body.blog.dark  .meta span {
-  color: #eee;
-}
-
-body.blog.dark .meta,
-body.blog .container-fluid.page-title .meta {
-  background: rgba(0,0,0,.6) !important;
-}
-
-body.blog.dark .pagination li:hover {
-  background: #333;
-}
-
-body.blog.dark .pagination li a {
-  color: #eee;
-}
-
-body.blog.dark .comments-form  form .input-field label {
-  color: #eee;
-}
-
-body.blog.dark .comments-form  form .input-field label.active {
-  color: #eee !important;
-}
-
-body.blog.dark .comments-form  form .input-field input[type=text],
-body.blog.dark .comments-form  form .input-field input[type=email],
-body.blog.dark .comments-form  form .input-field textarea {
-  color: #fff !important;
-  border-bottom: 1px solid #555;
-}
-
-body.blog.dark .comments-heading,
-body.blog.dark .comments-list .comment-author,
-body.blog.dark .comments-list .comment-reply {
-  color: #fff;
-}
-
-body.blog.dark .comments-list .comment-date {
-  color: #aaa;
-}
 
 body.dark #loader-wrapper .loader-section {
   background: #333;
@@ -1893,237 +1802,6 @@ body.light .personal-info ul h6 {
   border: 0;
 }
 
-/* BLOG
-================================================== */
-
-/*** Latest Posts ***/
-
-section#blog article {
-  position: relative;
-  margin-bottom: 50px;
-}
-
-section#blog figure {
-  margin: 0;
-  position: relative;
-}
-
-section#blog figure a {
-  position: relative;
-  display: block;
-  max-width: 100%;
-  overflow: hidden;
-  border-radius: 4px;
-}
-
-section#blog figure a img {
-  width: 100%;
-  border-radius: 4px;
-  webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  display: block;
-}
-
-section#blog figure a:hover img {
-  transform: scale(1.1) !important;
-  -o-transform: scale(1.1) !important;
-  -moz-transform: scale(1.1) !important;
-  -webkit-transform: scale(1.1) !important;
-  -ms-transform: scale(1.1) !important;
-  opacity: 1 !important;
-}
-
-section#blog .post-date {
-  width: 40px;
-  height: 50px;
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  text-align: center;
-  padding-top: 3px;
-  border-radius: 4px;
-  font-family: 'Open Sans', sans-serif;
-}
-
-section#blog .post-date span {
-  display: block;
-  color: #fff;
-}
-
-section#blog .post-date span:first-child {
-  font-size: 16px;
-  padding-top: 1px;
-}
-
-section#blog .post-date span:nth-child(2) {
-  font-size: 12px;
-  text-transform: uppercase;
-}
-
-section#blog article h4 {
-  color: #555;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 21px;
-  margin: 24px 0 12px;
-}
-
-section#blog .readmore.btn {
-  margin: 24px 0;
-}
-
-section#blog p {
-  line-height: 2;
-  font-family: 'Open Sans', sans-serif;
-  margin: 0;
-}
-
-section#blog .meta {
-  clear: both;
-  padding: 15px 0;
-  width: 100%;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  font-size: 14px;
-}
-
-section#blog .meta span {
-  margin-right: 15px;
-  display: inline-block;
-}
-
-section#blog .meta i {
-  padding-right: 6px;
-}
-
-.allposts {
-  text-align: center;
-  margin-bottom: 70px;
-}
-
-/*** Blog Page ***/
-
-body.blog .content {
-  padding: 0 24px;
-  margin: 0 auto;
-  max-width: 700px;
-}
-
-body.blog .btn.back {
-  background: transparent;
-  width: 100%;
-  transition: .1s;
-}
-
-body.blog .btn.back:hover {
-  color: #fff;
-}
-
-body.blog {
-  background-color: #fff;
-  overflow: auto;
-}
-
-body.blog .container-fluid.page-title {
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-image: url(../img/blog/banner.jpg);
-  padding: 0;
-  margin-bottom: 60px;
-}
-
-body.blog .container-fluid.page-title .content-banner {
-  background-color: rgba(0, 0, 0, .8);
-  padding: 200px 30px;
-  width: 100%;
-  text-align: center;
-}
-
-body.blog .container-fluid.page-title .content-banner h2,
-body.blog .container-fluid.page-title .meta {
-  color: #fff;
-}
-
-body.blog .container-fluid.page-title .meta  {
-	background:rgba(0,0,0,.6) !important;
-}
-
-body.blog .container-fluid.page-title .content-banner h2 span {
-	color:#fff !important;
-}
-
-.post-title .meta {
-  background: transparent !important;
-}
-
-body.blog .container.page-title h2 {
-  font-size: 55px;
-}
-
-.refresh {
-  margin-bottom: 70px;
-}
-
-/** Posts **/
-
-body.blog article {
-  margin-bottom: 60px;
-}
-
-body.blog figure {
-  margin: 0;
-}
-
-body.blog figure a img,
-body.blog figure img {
-  width: 100%;
-  border-radius: 4px;
-}
-
-body.blog article h4 {
-  color: #555;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 28px;
-  margin: 0 0 24px;
-}
-
-body.blog .readmore.btn {
-  margin: 24px 0;
-}
-
-body.blog p {
-  line-height: 2;
-  margin: 20px 0 0;
-  font-family: 'Open Sans', sans-serif;
-}
-
-body.blog .meta-post-content {
-  margin: 20px 0;
-}
-
-body.blog .meta {
-  clear: both;
-  padding: 15px 30px;
-  font-size: 14px;
-  border-radius: 10px;
-  font-family: 'Open Sans', sans-serif;
-  display: inline-block;
-  margin-top: 25px;
-  background:#eee !important;
-}
-
-body.blog .meta span {
-  margin-right: 15px;
-  display: inline-block;
-}
-
-body.blog .meta i {
-  padding-right: 6px;
-}
-
 /** Comments **/
 
 .comments-heading {
@@ -2676,8 +2354,8 @@ ul.social-intro li a:hover i {
     display: none !important;
   }
 
-  section#blog .container,
-.resume-container .container,
+  
+
 .contact-container .container {
     padding-left: 30px;
     padding-right: 30px;
